--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
 
 :root {
   --first-color: #14213d;
-  --second-color: #fca311;
-  --third-color: #2b2d42;
+  --second-color: #2b2d42;
+  --third-color: #fca311;
   --fourth-color: #e5e5e5;
   --body-background: #4d4d4d;
   --white: #fff;
