--- a/components/Home/Hero.module.css
+++ b/components/Home/Hero.module.css
@@ -2,84 +2,81 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
   width: 90%;
   margin: 0 auto;
-  height: 80vh;
+  height: 100vh;
 }
 
 .container img {
   position: absolute;
   top: 0;
   right: 0;
-  width: 60vw;
-  height: 80vh;
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
-}
-.container img::before {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 60vw;
-  height: 80vh;
-  background: rgba(0, 0, 0, 0.3);
-  content: '';
+  z-index: -10;
 }
 
 .text {
   width: 30%;
   display: block;
+  z-index: 1;
 }
 .text h2 {
   font-size: 1.1rem;
   color: var(--contrast-one);
-  padding-bottom: 0.5rem;
+  padding-bottom: 1rem;
+  margin: 0;
 }
 .text h1 {
   font-size: 2rem;
   color: var(--white);
-  padding-bottom: 0.5rem;
+  padding-bottom: 1rem;
+  margin: 0;
 }
 .text p {
   font-size: 1rem;
   color: var(--contrast-two);
-  padding-bottom: 0.5rem;
+  padding-bottom: 01rem;
+  margin: 0;
+  margin-bottom: 1rem;
 }
 .text a {
   text-decoration: none;
-  padding: 1rem 2rem;
+  padding: 1rem 3rem;
   background: var(--first-color);
   color: var(--white);
   text-transform: capitalize;
   letter-spacing: 1px;
-  border-radius: 10px;
+  border-radius: 5px;
   transition: 0.5s;
+  margin-bottom: 1rem;
 }
 .text a:hover {
-  background: var(--second-color);
+  background: var(--third-color);
 }
 
 .icons {
-  display: block;
+  display: grid;
+  z-index: 99;
 }
+
 .icons a {
-  text-decoration: none;
+  margin: 1.5rem 0;
 }
+
 .icons svg {
-  font-size: 1.5rem;
-  color: var(--white);
-  padding: 1.5rem;
-}
-.icons svg:hover {
-  color: var(--contrast-one);
+  font-size: 2rem;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
-  .container img {
-    width: 100%;
+  .container {
+    flex-direction: column;
+    justify-content: center;
     height: 100vh;
   }
-  .container img::before {
+  .container img {
     width: 100%;
     height: 100vh;
   }
@@ -91,5 +88,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 3rem;
+  }
+  .icons svg {
+    padding: 0;
   }
 }
