--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
   --first-color: #14213d;
   --second-color: #2b2d42;
   --third-color: #fca311;
-  --fourth-color: #e5e5e5;
+  --fourth-color: #333030;
   --body-background: #4d4d4d;
   --white: #fff;
   --black: #000;
