--- a/components/Home/Hero.module.css
+++ b/components/Home/Hero.module.css
@@ -26,7 +26,7 @@
   z-index: -1;
 }
 .text {
-  width: 35vw;
+  width: 40vw;
   z-index: 1;
   text-align: center;
 }
@@ -43,9 +43,10 @@
   color: var(--white);
 }
 .text p {
-  margin: 0;
+  margin: 0 auto;
   padding-bottom: 2rem;
   color: var(--contrast-two);
+  width: 80%;
 }
 .text a {
   margin: 0;
@@ -61,18 +62,14 @@
 
 .text a:hover {
   border: 1px solid var(--third-color);
-}
-
-.text a:last-of-type {
-  background: var(--first-color);
-  margin-left: 3rem;
+  color: var(--third-color);
 }
 
 .textcontainer {
   display: flex;
   justify-content: space-around;
-  width: 100%;
-  margin-top: 3rem;
+  width: 90%;
+  margin: 3rem auto 0;
 }
 .textcontainer svg {
   color: var(--white);
