--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -11,6 +11,21 @@
   justify-content: center;
   z-index: 100;
   transition: 0.5s;
+  background: transparent;
+}
+
+.header_active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  transition: 0.5s;
+  background: var(--body-background);
 }
 
 .wrapper {
@@ -52,6 +67,13 @@
   text-transform: capitalize;
   letter-spacing: 0.5px;
   font-size: 1.2rem;
+  padding: 1rem 2rem;
+  transition: .4s;
+  background: transparent;
+}
+
+.link a:hover{
+  background: var(--first-color);
 }
 
 .bars {
