--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -15,6 +15,7 @@
 }
 
 .header_active {
+  box-shadow: 0px 0px 15px 3px rgba(255, 255, 255, 0.5);
   position: fixed;
   top: 0;
   left: 0;
@@ -68,11 +69,11 @@
   letter-spacing: 0.5px;
   font-size: 1.2rem;
   padding: 1rem 2rem;
-  transition: .4s;
+  transition: 0.4s;
   background: transparent;
 }
 
-.link a:hover{
+.link a:hover {
   background: var(--first-color);
 }
 
