--- a/components/Home/Hero.module.css
+++ b/components/Home/Hero.module.css
@@ -26,7 +26,7 @@
   z-index: -1;
 }
 .text {
-  width: 40vw;
+  width: 50vw;
   z-index: 1;
   text-align: center;
 }
@@ -46,7 +46,7 @@
   margin: 0 auto;
   padding-bottom: 2rem;
   color: var(--contrast-two);
-  width: 80%;
+  width: 70%;
 }
 .text a {
   margin: 0;
@@ -92,15 +92,25 @@
   color: var(--first-color);
 }
 
+.flex {
+  display: flex;
+  justify-content: center;
+}
+
+.flex h1:first-of-type {
+  margin-right: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .text {
     width: 100%;
   }
-  .text h1 {
-    font-size: 2.5rem;
+  .flex h1 {
+    font-size: 1.9rem;
   }
   .text p {
     font-size: 0.9rem;
+    width: 80%;
   }
   .text a {
     padding: 1rem 2rem;
